Big changes to api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-
 # Database
 spring.datasource.driver-class-name:org.postgresql.Driver
-spring.datasource.url:jdbc:postgresql://192.168.1.12:5432/appDatabase
-spring.datasource.username:postgresUser
+spring.datasource.url:jdbc:postgresql://database:5432/appDatabase
+spring.datasource.username:postgreUser
 spring.datasource.password:postgresPassword
 spring.hibernate.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=update
